--- a/style.css
+++ b/style.css
@@ -231,7 +231,7 @@ a:hover {
 .l-bloc h5 a,
 .l-bloc h6 a,
 .l-bloc p a {
-    color: rgba(0, 0, 0, .6);
+    color: #8E5D68
 }
 
 .d-bloc .panel .a-btn:hover,
@@ -253,7 +253,7 @@ a:hover {
 }
 
 .l-bloc .navbar-toggle .icon-bar {
-    color: rgba(0, 0, 0, .6);
+    color: #8E5D68
 }
 
 .d-bloc .panel .btn-wire,
