--- a/style.css
+++ b/style.css
@@ -338,7 +338,7 @@ a:hover {
 }
 
 .navbar-toggle {
-    margin: 10px 10px 0 0;
+    margin: 10px 30px 0 0;
     border: 0px;
 }
 
@@ -955,8 +955,8 @@ h4 {
         box-shadow: none;
     }
     .navbar-brand img {
-        max-height: 40px;
-        width: auto;
+        height: 40px;
+        width: 230px;
     }
     .nav-invert .navbar-header {
         float: none;
