--- a/style.css
+++ b/style.css
@@ -866,8 +866,8 @@ h4 {
         position: relative;
     }
     .bloc {
-        padding-left: env(safe-area-inset-left);
-        padding-right: env(safe-area-inset-right);
+        padding: constant(safe-area-inset-left);
+        padding: constant(safe-area-inset-right);
     }
     .bloc-group,
     .bloc-group .bloc {
@@ -877,8 +877,8 @@ h4 {
     .bloc-fill-screen .fill-bloc-top-edge,
     .bloc-fill-screen .fill-bloc-bottom-edge {
         padding: 0 20px;
-        padding-left: env(safe-area-inset-left);
-        padding-right: env(safe-area-inset-right);
+        padding: constant(safe-area-inset-left);
+        padding: constant(safe-area-inset-right);
     }
 }
 
